# SMC-Bench

./: .gitignore  README.md
docs/analysis/: binaryAnalysis.md
docs/asm/: dataAccess.x86.md  read1byte.x86.md  smc코드2.md
docs/how-to/asm/: howto-smc2x86.md  smc코드해보기.md  smc코드해보기.temp.md
docs/how-to/lifting/: howto-lifting-smc1x86.md  remill.md
docs/lifting/: mcsema-lift.md  mcsema.md  remill-lift.md  remill2.md  remillAPI.md  리프팅하기.md
docs/temp/mips-x86(smc)/: smc 4번코드(x86).md  smc 5번코드(x86).md  smc1.x86.s
docs/tutorial/: howto-smc1x86.md  howto-smc2x86.md
docs/tutorial/unreachable/: objdump.md  readme.md  unreachable.x86.c
mips-x86(smc)/: smc 1번코드(x86).md  smc 2번코드(x86).md
smc코드x86변환/: smc 1번코드(x86).md  smc 2번코드(x86).md
src/: readme.md  run_x86.py  smc13.asm  smc2.asm  smc5.asm  smc6.asm  smc7.asm
src/asm/: readme.md  run_x86.py  smc2.x86.s  smc9.mips.s
src/asm/shellcode/: shell.ll  shell.x64.s  shell.x86.c
src/asm/smc0/: smc0.ll  smc0.x86.s  test.x86.s
src/asm/smc1/: readme.md  smc1.c  smc1.c.ll  smc1.ll  smc1.mips.s  smc1.x86  smc1.x86.ll  smc1.x86.mcsema.ll  smc1.x86.remill.ll  smc1.x86.s  smc1_fib.c  smc1_fib.c.ll  temp.ll
src/asm/smc10/: .gdb_history  smc10.c  smc10.c.ll  smc10.x86.remill.ll  smc10.x86.s
src/asm/smc11/: .gdb_history  smc11-2.c  smc11-2.c.ll  smc11.c.ll  smc11.ll  smc11.mips.s  smc11.x86.remil.ll  smc11.x86.s
src/asm/smc2/: readme.md  remilldump.py  smc2.c  smc2.c.ll  smc2.ll  smc2.x86.s
src/asm/smc3/: readme.md  smc3.c  smc3.c.ll  smc3.ll  smc3.mips.s  smc3.x86.remill.ll  smc3.x86.s  smc3_runtime_code_gen.c  smc3_runtime_code_gen_globalvar.c  smc3_runtime_code_gen_globalvar.c.ll  smc3_runtime_code_gen_localvar.c  smc3_runtime_code_gen_localvar.c.ll  smc3_test.c  smc3_x86.remil.ll
src/asm/smc4/: .gdb_history  readme.md  readme.x86.md  smc4.c  smc4.c.ll  smc4.ll  smc4.mips.s  smc4.x86  smc4.x86.out  smc4.x86.remill.ll  smc4.x86.s  smc4_runtime_generation.c  smc4_runtime_generation.c.ll
src/asm/smc5/: .gdb_history  .gitignore  readme.md  smc5.c  smc5.c.ll  smc5.ll  smc5.x86  smc5.x86.remill.ll  smc5.x86.s  smc5_self_mutating.c  smc5_self_mutating.c.ll
src/asm/smc6/: .gdb_history  .readme.x86.ll.md.swp  readme.md  readme.x86.ll.md  readme.x86.md  smc6-analysis-report.md  smc6.c  smc6.c.ll  smc6.ll  smc6.x86.lift.ll  smc6.x86.remill.ll  smc6.x86.s  smc6_mutual_modification.c  smc6_mutual_modification.c.ll
src/asm/smc7/: .gdb_history  readme.md  smc7.c  smc7.c.ll  smc7.x86  smc7.x86.remill.ll  smc7.x86.s
src/asm/smc8/: .gdb_history  readme.md  smc8.c  smc8.c.ll  smc8.mips.s  smc8.x86.remill.ll  smc8.x86.s  smc8_mutual_modification.c  smc8_mutual_modification.c.ll
src/asm/smc9/: readme.md  smc9.c  smc9.c.ll  smc9.x86.s  smc9_foo_to_shell.c.ll
src/c_smc/c_smc0/: smc0.c
src/c_smc/c_smc1/: c_smc1.c
src/c_smc/c_smc1/output/: smc1-lift.new
src/c_smc/c_smc1/src/: smc1-lift.s
src/c_smc/c_smc2/: smc2  smc2.c
src/c_smc/c_smc2/output/: smc2-lift.new
src/c_smc/c_smc2/src/: smc2-lift.s  smc2.s
src/c_smc/c_smc4/: .gdb_history  smc4  smc4.c
src/c_smc/c_smc5/: smc5  smc5.c
src/c_smc/c_smc6/: .gdb_history  smc6.c
src/c_smc/c_smc_42/: README.md  c_smc2.c  c_smc_42.c  c_smc_42.ll
src/c_smc/c_smc_42/src/: c_smc_42_lift.ll  smc2.ll
src/c_smc/c_smc_assembly/: c_smc1.c  c_smc1.ll
src/c_smc/c_smc_assembly/src/: smc1-lift.ll  smc1.ll
src/c_smc/c_smc_instruction_modifing/: README.md  c_smc_instruction_modifing.ll  readme.md  smc1.c
src/c_smc/c_smc_reference_modifing/: c_smc_reference_modifing.c  c_smc_reference_modifing.mips.s  readme.md  smc2.mips.s  smc2.x86.mcsema.s
src/c_smc/c_smc_shell/: README.md  c_smc3.c  smc3
src/c_smc/change_control_flow/: change_control_flow.c
src/cfg/: smc1.x86.cfg
src/lifting/: lifting.py  readme.md  temp.ll
src/lifting/helloWorld/: helloWorld.abi.bc  helloWorld.abi.c  helloWorld.abi.ll  helloWorld.bc  helloWorld.c  helloWorld.cfg  helloWorld.ll  helloWorld.new.out  helloWorld.out
src/smc1/: readme.md  smc1-analysis-report.md  smc1.mips.s  smc1.x86.bc  smc1.x86.ll  smc1.x86.s
src/smc10/: smc10-analysis-report.md  smc10.x86.s
src/smc11/: smc11.x86.s
src/smc2/: smc2-analysis-report.md  smc2.x86.s
src/smc4/: smc4.x86.s
src/smc5/: smc5.x86.s
src/smc6/: smc6.x86.s
src/smc7/: smc7.x86.s
src/smc8/: smc8-analysis-report.md  smc8.x86.s
src/smc9/: smc9-analysis-report.md  smc9.mips.s  smc9.x86.s
src/tools/constrainter/: CMakeLists.txt  HelloWorld.ll  main.cpp  readme.md  readme2.md  readme3.md  review.md  test.c  test.ll  test.py  test.sh  test.txt  test2.ll
src/tools/constrainter/include/: Analysis.cpp  Analysis.h  CubicEngine.cpp  CubicEngine.h  CubicSolver.hpp
src/tools/constrainter/include/temp/: Analysis.backup.cpp
src/tools/constrainter/test/: CMakeLists.txt  c_smc_reference_modifing.c.ll  c_smc_shell.ll  smc4.c.ll  smc7.c.ll  test1.ll  test3.ll
src/tools/constrainter/test/Detect/: CMakeLists.txt  Detect.cpp
src/tools/constrainter/test/cubicSolver/: CMakeLists.txt  cubicSolver.cpp  test.ll  test2.ll
src/tools/constrainter/test/cubicSolver2/: CMakeLists.txt  cubicSolver.cpp  test.ll
src/tools/constrainter/test/getInstructionName/: CMakeLists.txt  getInstructionName.cpp  test.ll
src/tools/constrainter/test/getOperandName/: CMakeLists.txt  getOperandName.cpp  test.ll
src/tools/constrainter/test/printConstraints/: CMakeLists.txt  printConstraints.cpp
src/tools/lifting/: lifting.py
src/tools/onedump/: onedump.py  readme.md
src/tools/remilldump/: readme.md  remilldump.py  test.x86.ll  test.x86.s
test/: README.md  dataAccess.x86.s  read1byte.x86.s
코드분석/: SMC 코드 11번.md  SMC 코드 1번.md  SMC 코드 2번.md  SMC 코드 3번.md  SMC 코드 4번.md  SMC 코드 5번.md  SMC 코드 7번.md  SMC 코드 9번.md  smc 코드 10번.md  smc 코드 12번.md  smc 코드 13번.md  smc 코드 8번.md
